syntax = "proto3";

package inv;

option go_package = "invpb";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";
option java_package = "com.inv";

import "document/service.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-swagger/options/annotations.proto";

// InvoiceService contains all common interactions for invoice documents
service InvoiceService {
  rpc Create(InvoiceCreatePayload) returns (InvoiceResponse) {
    option (google.api.http) = {
      post: "/invoice"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Creates an invoice"
    };
  }
  rpc Update(InvoiceUpdatePayload) returns (InvoiceResponse) {
    option (google.api.http) = {
      put: "/invoice/{identifier}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Updates an invoice"
    };
  }
  rpc GetVersion(GetVersionRequest) returns (InvoiceResponse) {
    option (google.api.http) = {
      get: "/invoice/{identifier}/{version}"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Get a specific version of an invoice"
    };
  }
  rpc Get(GetRequest) returns (InvoiceResponse) {
    option (google.api.http) = {
      get: "/invoice/{identifier}"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Get the current invoice"
    };
  }
}

message GetRequest {
  string identifier = 1;
}

message GetVersionRequest {
  string identifier = 1;
  string version = 2;
}

message InvoiceCreatePayload {
  document.ReadAccess read_access = 1;
  document.WriteAccess write_access = 2;
  InvoiceData data = 3;
}

message InvoiceUpdatePayload {
  string identifier = 1;
  document.ReadAccess read_access = 2;
  document.WriteAccess write_access = 3;
  InvoiceData data = 4;
}

message InvoiceResponse {
  document.ResponseHeader header = 1;
  InvoiceData data = 2;
}

// InvoiceData is the default invoice schema
message InvoiceData {
  // invoice number or reference number
  string number = 1;
  // invoice status
  string status = 2;
  string sender_invoice_id = 3;
  string recipient_invoice_id = 4;
  string sender_company_name = 5;
  string sender_contact_person_name = 6;
  // street and address details of the sender company
  string sender_street1 = 7;
  string sender_street2 = 8;
  string sender_city = 9;
  string sender_zipcode = 10;
  string sender_state = 11;
  // country ISO code of the sender of this invoice
  string sender_country = 12;
  string bill_to_company_name = 43;
  string bill_to_contact_person_name = 44;
  string bill_to_street1 = 15;
  string bill_to_street2 = 16;
  string bill_to_city = 17;
  string bill_to_zipcode = 18;
  string bill_to_state = 50;
  string bill_to_country = 20;
  string bill_to_vat_number = 21;
  string bill_to_local_tax_id = 60;
  string remit_to_company_name = 23;
  string remit_to_contact_person_name = 24;
  string remit_to_street1 = 25;
  string remit_to_street2 = 26;
  string remit_to_city = 27;
  string remit_to_zipcode = 28;
  string remit_to_state = 30;
  string remit_to_country = 31;
  string remit_to_vat_number = 32;
  string remit_to_local_tax_id = 33;
  string remit_to_tax_country = 34;
  string ship_to_company_name = 35;
  string ship_to_contact_person_name = 36;
  string ship_to_street1 = 37;
  string ship_to_street2 = 38;
  string ship_to_city = 39;
  string ship_to_zipcode = 40;
  string ship_to_state = 41;
  string ship_to_country = 42;
  // ISO currency code
  string currency = 13;
  // invoice amount including tax
  string gross_amount = 14;
  // invoice amount excluding tax
  string net_amount = 45;
  string tax_amount = 46;
  string tax_rate = 47;
  bool tax_on_line_level = 48;
  // centrifuge ID of the recipient
  string recipient = 49;
  // centrifuge ID of the sender
  string sender = 19;
  // centrifuge ID of the payee
  string payee = 51;
  string comment = 52;
  string shipping_terms = 53;
  string requester_email = 54;
  string requester_name = 55;
  //number of the delivery note
  string delivery_number = 56;
  bool is_credit_note = 57;
  string credit_note_invoice_number = 58;
  google.protobuf.Timestamp credit_for_invoice_date = 59;
  google.protobuf.Timestamp date_due = 22;
  google.protobuf.Timestamp date_paid = 61;
  google.protobuf.Timestamp date_updated = 62;
  google.protobuf.Timestamp date_created = 63;
  repeated document.BinaryAttachment attachments = 64;
  repeated LineItem line_items = 65;
  repeated document.PaymentDetails payment_details = 66;
  repeated TaxItem tax_items = 67;
}

message TaxItem {
  string item_number = 1;
  string invoice_item_number = 2;
  string tax_amount = 3;
  string tax_rate = 4;
  string tax_code = 5;
  string tax_base_amount = 6;
}

message LineItem {
  string item_number = 1;
  string description = 2;
  string sender_part_no = 3;
  string price_per_unit = 4;
  string quantity = 5;
  string unit_of_measure = 6;
  string net_weight = 7;
  string tax_amount = 8;
  string tax_rate = 9;
  string tax_code = 10;
  //the total amount of the line item
  string total_amount = 11;
  string purchase_order_number = 12;
  string purchase_order_item_number = 13;
  string delivery_note_number = 14;
}
