syntax = "proto3";

package po;

option go_package = "popb";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";
option java_package = "com.po";

import "document/service.proto";
import "google/protobuf/timestamp.proto";

message PurchaseOrderCreatePayload {
  repeated string read_access = 1;
  repeated string write_access = 2;
  PurchaseOrderData data = 3;
  // custom attributes
  map<string, document.Attribute> attributes = 4;
}

message PurchaseOrderUpdatePayload {
  string document_id = 1;
  repeated string read_access = 2;
  repeated string write_access = 3;
  PurchaseOrderData data = 4;
  // custom attributes
  map<string, document.Attribute> attributes = 5;
}

message PurchaseOrderResponse {
  document.ResponseHeader header = 1;
  PurchaseOrderData data = 2;
  // custom attributes
  map<string, document.Attribute> attributes = 3;
}

message PurchaseOrderData {
  string status = 1;
  // purchase order number or reference number
  string number = 2;
  string sender_order_id = 3;
  string recipient_order_id = 4;
  string requisition_id = 5;
  string requester_name = 6;
  string requester_email = 7;
  string ship_to_company_name = 8;
  string ship_to_contact_person_name = 9;
  string ship_to_street1 = 10;
  string ship_to_street2 = 11;
  string ship_to_city = 12;
  string ship_to_zipcode = 13;
  string ship_to_state = 14;
  string ship_to_country = 15;
  string payment_terms = 16;
  string currency = 17;
  string total_amount = 18;
  // centrifuge ID of the recipient
  string recipient = 19;
  // centrifuge ID of the sender
  string sender = 20;
  string comment = 21;
  google.protobuf.Timestamp date_sent = 22;
  google.protobuf.Timestamp date_confirmed = 23;
  google.protobuf.Timestamp date_updated = 24;
  google.protobuf.Timestamp date_created = 25;
  repeated document.BinaryAttachment attachments = 26;
  repeated LineItem line_items = 27;
  repeated document.PaymentDetails payment_details = 28;
}

message LineItem {
  string status = 1;
  string item_number = 2;
  string description = 3;
  string amount_invoiced = 4;
  string amount_total = 5;
  string requisition_number = 6;
  string requisition_item = 7;
  string part_no = 8;
  string price_per_unit = 9;
  string unit_of_measure = 10;
  string quantity = 11;
  string received_quantity = 12;
  google.protobuf.Timestamp date_updated = 13;
  google.protobuf.Timestamp date_created = 14;
  int64 revision_number = 15;
  repeated LineItemActivity activities = 16;
  repeated TaxItem tax_items = 17;
}

message TaxItem {
  string item_number = 1;
  string purchase_order_item_number = 2;
  string tax_amount = 3;
  string tax_rate = 4;
  string tax_code = 5;
  string tax_base_amount = 6;
}

message LineItemActivity {
  string item_number = 1;
  //delivered, returned, credited, invoiced, paid, ...
  string status = 2;
  string quantity = 3;
  string amount = 4;
  //depending on status delivery note, invoice, ...
  string reference_document_id = 5;
  //line item from the reference document
  string reference_document_item = 6;
  google.protobuf.Timestamp date = 7;
}
